[package]
name = "mdbook-arborium"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arborium = { version = "2.13.0", features = ["all-languages"]}
clap = {version = "4.5.60", features = ["cargo"]}
mdbook-markdown = "0.5.2"
mdbook-preprocessor = "0.5.2"
semver = "1.0.27"
serde_json = "1.0.149"
thiserror = "2.0.18"
